src/objects/Test__mdt.object
<CustomObject>
    <fields>
        <fullName>Test2__c</fullName>
        <label>Test2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>34</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Test</relationshipLabel>
        <relationshipName>Test</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Test</label>
    <pluralLabel>Test</pluralLabel>
</CustomObject>